# tuto-bevy-shaders

./: Cargo.toml  README.md
assets/: my_material.wgsl
src/: main.rs
