[package]
name = "tuto_bevy_shaders"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = "z"

[dependencies]
bevy = { version = "0.7", features = [
    "bevy_winit",
    "dynamic",
    "filesystem_watcher",
    "hdr",
    "png",
    "render",
    "x11"
] }
bevy-inspector-egui = "0.10"
